--- a/menubar.html
+++ b/menubar.html
@@ -1,14 +1,13 @@
-<!doctype html>
-<html lang="en" class="dark">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri + React + Typescript</title>
+    <title>Circadian Rhythm Tracker - Menubar</title>
   </head>
-
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="menubar-root"></div>
+    <script type="module" src="/src/menubar.tsx"></script>
   </body>
-</html>
+</html> 
